--- a/package.json
+++ b/package.json
@@ -8,16 +8,26 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/bottom-tabs": "^5.4.5",
+    "@react-navigation/material-top-tabs": "^5.2.5",
+    "@react-navigation/native": "^5.4.0",
     "expo": "~37.0.3",
+    "expo-barcode-scanner": "^8.1.0",
     "expo-updates": "~0.2.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
+    "react-native-camera": "^3.26.0",
+    "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-permissions": "^2.1.4",
+    "react-native-qrcode-scanner": "^1.4.1",
     "react-native-reanimated": "~1.7.0",
     "react-native-screens": "~2.2.0",
+    "react-native-svg": "^12.1.0",
     "react-native-unimodules": "~0.9.0",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "react-navigation-tabs": "^2.8.13"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
