Adding login page, checkin function, and UserInfo page

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -47,4 +47,6 @@ target 'parkable' do
 
   pod 'RNPermissions', :path => '../node_modules/react-native-permissions'
 
+  pod 'RNVectorIcons', :path => '../node_modules/react-native-vector-icons'
+
 end
