--- a/package.json
+++ b/package.json
@@ -13,19 +13,24 @@
     "@react-navigation/native": "^5.4.0",
     "expo": "~37.0.3",
     "expo-barcode-scanner": "^8.1.0",
+    "expo-permissions": "latest",
     "expo-updates": "~0.2.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
     "react-native-camera": "^3.26.0",
+    "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-permissions": "^2.1.4",
     "react-native-qrcode-scanner": "^1.4.1",
     "react-native-reanimated": "~1.7.0",
+    "react-native-router-flux": "^4.2.0",
     "react-native-screens": "~2.2.0",
     "react-native-svg": "^12.1.0",
     "react-native-unimodules": "~0.9.0",
+    "react-native-vector-icons": "^6.6.0",
     "react-native-web": "~0.11.7",
     "react-navigation-tabs": "^2.8.13"
   },
