--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "~1.6.0",
     "react-native-linear-gradient": "^2.5.6",
+    "react-native-paper": "^3.10.1",
     "react-native-permissions": "^2.1.4",
     "react-native-qrcode-scanner": "^1.4.1",
     "react-native-reanimated": "~1.7.0",
