--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
+    "react-native-axios": "^0.17.1",
     "react-native-camera": "^3.26.0",
+    "react-native-dotenv": "^0.2.0",
     "react-native-easy-grid": "^0.2.2",
     "react-native-elements": "^2.0.0",
     "react-native-gesture-handler": "~1.6.0",
@@ -41,6 +43,7 @@
     "@types/react-native": "~0.61.23",
     "babel-preset-expo": "~8.1.0",
     "jest-expo": "~37.0.0",
+    "reactotron-react-native": "^5.0.0",
     "typescript": "~3.8.3"
   },
   "jest": {
