--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-barcode-scanner": "^8.1.0",
     "expo-permissions": "latest",
     "expo-updates": "~0.2.0",
+    "mem": "^6.1.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "~0.61.5",
