--- a/app.json
+++ b/app.json
@@ -1,14 +1,13 @@
 {
-  "name": "parkable",
-  "displayName": "parkable",
+  "name": "HawkScan",
+  "displayName": "HawkScan",
   "expo": {
-    "name": "parkable",
-    "slug": "parkable",
+    "name": "HawkScan",
+    "slug": "HawkScan",
     "version": "1.0.0",
     "platforms": [
       "ios",
-      "android",
-      "web"
+      "android"
     ],
     "assetBundlePatterns": [
       "**/*"
